Fix reference_time calculation in AudioOutputStreamFuchsia

AudioOutputStreamFuchsia was relying on AudioOut::Play() to calculate
stream reference time. When the stream was previously paused Play()
doesn't take into account the current media position, as result
reference_time wasn't calculated correctly (see MTWN-164). Updated the
code to calculate reference_time_ explicitly instead of relying on
AudioOut::Play().

Also added DiscardAllPackets() call in Stop() to discard all buffered
data to avoid playing it when the stream is restarted.

Bug: 882983
Change-Id: I216fd41bfdb3479ea4c8db6523c7e66ce91552cf
Reviewed-on: https://chromium-review.googlesource.com/1220704
Reviewed-by: Wez <wez@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591409}
Former-commit-id: 8e7c1b59c87f52bc7e46cf7a92e51247c3e54d1b